--- a/07-PO33Q.html
+++ b/07-PO33Q.html
@@ -1629,8 +1629,8 @@ Figure&nbsp;6: ROC Curve
 
     <script>
 
-      function styleCell_vcwwd024d4rno9zw8y2c(i, j, css_id) {
-          var table = document.getElementById("tinytable_vcwwd024d4rno9zw8y2c");
+      function styleCell_y74clstbswz1hzd6r4hx(i, j, css_id) {
+          var table = document.getElementById("tinytable_y74clstbswz1hzd6r4hx");
           var cell = table.rows[i]?.cells[j];  // Safe navigation to avoid errors
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -1640,7 +1640,7 @@ Figure&nbsp;6: ROC Curve
           }
       }
       function insertSpanRow(i, colspan, content) {
-        var table = document.getElementById('tinytable_vcwwd024d4rno9zw8y2c');
+        var table = document.getElementById('tinytable_y74clstbswz1hzd6r4hx');
         var newRow = table.insertRow(i);
         var newCell = newRow.insertCell(0);
         newCell.setAttribute("colspan", colspan);
@@ -1648,8 +1648,8 @@ Figure&nbsp;6: ROC Curve
         // this may be unsafe, but innerText does not interpret <br>
         newCell.innerHTML = content;
       }
-      function spanCell_vcwwd024d4rno9zw8y2c(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_vcwwd024d4rno9zw8y2c");
+      function spanCell_y74clstbswz1hzd6r4hx(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_y74clstbswz1hzd6r4hx");
         const targetRow = table.rows[i];
         const targetCell = targetRow.cells[j];
         for (let r = 0; r < rowspan; r++) {
@@ -1679,26 +1679,26 @@ Figure&nbsp;6: ROC Curve
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: 1, j: 4 }, { i: 1, j: 3 },  ], css_id: 'tinytable_css_qhagrtowyzv5ttm6d961',}, 
-          { positions: [ { i: 0, j: 3 }, { i: 0, j: 2 }, { i: 0, j: 4 },  ], css_id: 'tinytable_css_hgc8nig70u8lo9hhhhw3',}, 
-          { positions: [ { i: 12, j: 1 }, { i: 12, j: 4 }, { i: 12, j: 2 }, { i: 12, j: 3 },  ], css_id: 'tinytable_css_9m3jv2fnd47rkbwomb8i',}, 
-          { positions: [ { i: 10, j: 3 }, { i: 10, j: 2 }, { i: 10, j: 4 }, { i: 10, j: 1 },  ], css_id: 'tinytable_css_3sgn3n5pc0tdwy9mtzmj',}, 
-          { positions: [ { i: 4, j: 1 }, { i: 3, j: 1 }, { i: 8, j: 1 }, { i: 5, j: 1 }, { i: 7, j: 1 }, { i: 3, j: 2 }, { i: 9, j: 1 }, { i: 6, j: 1 }, { i: 11, j: 1 }, { i: 7, j: 2 }, { i: 4, j: 2 }, { i: 5, j: 2 }, { i: 6, j: 2 }, { i: 11, j: 2 }, { i: 8, j: 2 }, { i: 9, j: 2 }, { i: 5, j: 3 }, { i: 6, j: 3 }, { i: 3, j: 3 }, { i: 4, j: 3 }, { i: 9, j: 3 }, { i: 5, j: 4 }, { i: 7, j: 3 }, { i: 8, j: 3 }, { i: 4, j: 4 }, { i: 9, j: 4 }, { i: 11, j: 3 }, { i: 3, j: 4 }, { i: 8, j: 4 }, { i: 6, j: 4 }, { i: 7, j: 4 }, { i: 11, j: 4 },  ], css_id: 'tinytable_css_noii1nniieoqz2sxvhd2',}, 
-          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_o33frga3d6t3i3qee3sb',}, 
-          { positions: [ { i: 1, j: 1 }, { i: 1, j: 2 },  ], css_id: 'tinytable_css_0lb8zaqb21gain6nh0sj',}, 
-          { positions: [ { i: 2, j: 1 }, { i: 2, j: 2 }, { i: 2, j: 3 }, { i: 2, j: 4 },  ], css_id: 'tinytable_css_7q0gn0avyu1qyp1zf37e',}, 
-          { positions: [ { i: 12, j: 0 },  ], css_id: 'tinytable_css_rd4xo5j04665ioif2v3x',}, 
-          { positions: [ { i: 10, j: 0 },  ], css_id: 'tinytable_css_wl74y86a5jue5s3yy4pk',}, 
-          { positions: [ { i: 3, j: 0 }, { i: 4, j: 0 }, { i: 5, j: 0 }, { i: 6, j: 0 }, { i: 7, j: 0 }, { i: 8, j: 0 }, { i: 9, j: 0 }, { i: 11, j: 0 },  ], css_id: 'tinytable_css_qclii6ospzse9t5chpc8',}, 
-          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_4vsn744c1y5lnsp2mt2t',}, 
-          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_0cby3akpoy1k4ha595ne',}, 
-          { positions: [ { i: 2, j: 0 },  ], css_id: 'tinytable_css_fkd40a0xq8lrmu9gkzca',}, 
+          { positions: [ { i: 1, j: 4 }, { i: 1, j: 3 },  ], css_id: 'tinytable_css_od151bfai7vsix1dntl1',}, 
+          { positions: [ { i: 0, j: 3 }, { i: 0, j: 2 }, { i: 0, j: 4 },  ], css_id: 'tinytable_css_p6h69ubl2c5us5wj516c',}, 
+          { positions: [ { i: 12, j: 1 }, { i: 12, j: 4 }, { i: 12, j: 2 }, { i: 12, j: 3 },  ], css_id: 'tinytable_css_anc27h1cyz8iq8gpxme8',}, 
+          { positions: [ { i: 10, j: 3 }, { i: 10, j: 2 }, { i: 10, j: 4 }, { i: 10, j: 1 },  ], css_id: 'tinytable_css_0g31g18815qgr0xhao6c',}, 
+          { positions: [ { i: 4, j: 1 }, { i: 3, j: 1 }, { i: 8, j: 1 }, { i: 5, j: 1 }, { i: 7, j: 1 }, { i: 3, j: 2 }, { i: 9, j: 1 }, { i: 6, j: 1 }, { i: 11, j: 1 }, { i: 7, j: 2 }, { i: 4, j: 2 }, { i: 5, j: 2 }, { i: 6, j: 2 }, { i: 11, j: 2 }, { i: 8, j: 2 }, { i: 9, j: 2 }, { i: 5, j: 3 }, { i: 6, j: 3 }, { i: 3, j: 3 }, { i: 4, j: 3 }, { i: 9, j: 3 }, { i: 5, j: 4 }, { i: 7, j: 3 }, { i: 8, j: 3 }, { i: 4, j: 4 }, { i: 9, j: 4 }, { i: 11, j: 3 }, { i: 3, j: 4 }, { i: 8, j: 4 }, { i: 6, j: 4 }, { i: 7, j: 4 }, { i: 11, j: 4 },  ], css_id: 'tinytable_css_hlehvloo2sogu60kbcqo',}, 
+          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_vcj5qdxc4t2a42wu5p98',}, 
+          { positions: [ { i: 1, j: 1 }, { i: 1, j: 2 },  ], css_id: 'tinytable_css_sy3u7oxv4luhtw70wkra',}, 
+          { positions: [ { i: 2, j: 1 }, { i: 2, j: 2 }, { i: 2, j: 3 }, { i: 2, j: 4 },  ], css_id: 'tinytable_css_wm9glck258csxtnl298k',}, 
+          { positions: [ { i: 12, j: 0 },  ], css_id: 'tinytable_css_1csm0g1shpu1jfuqo7pm',}, 
+          { positions: [ { i: 10, j: 0 },  ], css_id: 'tinytable_css_33lkfllim69lb69whqc2',}, 
+          { positions: [ { i: 3, j: 0 }, { i: 4, j: 0 }, { i: 5, j: 0 }, { i: 6, j: 0 }, { i: 7, j: 0 }, { i: 8, j: 0 }, { i: 9, j: 0 }, { i: 11, j: 0 },  ], css_id: 'tinytable_css_qwynldwi71uw1iqnrp06',}, 
+          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_a5sgbw6agovd5x645heh',}, 
+          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_1616iwxyg409ez1hmw4y',}, 
+          { positions: [ { i: 2, j: 0 },  ], css_id: 'tinytable_css_j6ipwhrof70ptbqo3gtr',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_vcwwd024d4rno9zw8y2c(cell.i, cell.j, group.css_id);
+                  styleCell_y74clstbswz1hzd6r4hx(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -1706,23 +1706,23 @@ Figure&nbsp;6: ROC Curve
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_qhagrtowyzv5ttm6d961, .table th.tinytable_css_qhagrtowyzv5ttm6d961 { text-align: center; text-align: center; }
-      .table td.tinytable_css_hgc8nig70u8lo9hhhhw3, .table th.tinytable_css_hgc8nig70u8lo9hhhhw3 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_9m3jv2fnd47rkbwomb8i, .table th.tinytable_css_9m3jv2fnd47rkbwomb8i { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_3sgn3n5pc0tdwy9mtzmj, .table th.tinytable_css_3sgn3n5pc0tdwy9mtzmj { text-align: center; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_noii1nniieoqz2sxvhd2, .table th.tinytable_css_noii1nniieoqz2sxvhd2 { text-align: center; }
-      .table td.tinytable_css_o33frga3d6t3i3qee3sb, .table th.tinytable_css_o33frga3d6t3i3qee3sb { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_0lb8zaqb21gain6nh0sj, .table th.tinytable_css_0lb8zaqb21gain6nh0sj { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_7q0gn0avyu1qyp1zf37e, .table th.tinytable_css_7q0gn0avyu1qyp1zf37e { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_rd4xo5j04665ioif2v3x, .table th.tinytable_css_rd4xo5j04665ioif2v3x { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_wl74y86a5jue5s3yy4pk, .table th.tinytable_css_wl74y86a5jue5s3yy4pk { text-align: left; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_qclii6ospzse9t5chpc8, .table th.tinytable_css_qclii6ospzse9t5chpc8 { text-align: left; }
-      .table td.tinytable_css_4vsn744c1y5lnsp2mt2t, .table th.tinytable_css_4vsn744c1y5lnsp2mt2t { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_0cby3akpoy1k4ha595ne, .table th.tinytable_css_0cby3akpoy1k4ha595ne { text-align: left; text-align: center; }
-      .table td.tinytable_css_fkd40a0xq8lrmu9gkzca, .table th.tinytable_css_fkd40a0xq8lrmu9gkzca { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_od151bfai7vsix1dntl1, .table th.tinytable_css_od151bfai7vsix1dntl1 { text-align: center; text-align: center; }
+      .table td.tinytable_css_p6h69ubl2c5us5wj516c, .table th.tinytable_css_p6h69ubl2c5us5wj516c { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_anc27h1cyz8iq8gpxme8, .table th.tinytable_css_anc27h1cyz8iq8gpxme8 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_0g31g18815qgr0xhao6c, .table th.tinytable_css_0g31g18815qgr0xhao6c { text-align: center; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_hlehvloo2sogu60kbcqo, .table th.tinytable_css_hlehvloo2sogu60kbcqo { text-align: center; }
+      .table td.tinytable_css_vcj5qdxc4t2a42wu5p98, .table th.tinytable_css_vcj5qdxc4t2a42wu5p98 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_sy3u7oxv4luhtw70wkra, .table th.tinytable_css_sy3u7oxv4luhtw70wkra { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_wm9glck258csxtnl298k, .table th.tinytable_css_wm9glck258csxtnl298k { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_1csm0g1shpu1jfuqo7pm, .table th.tinytable_css_1csm0g1shpu1jfuqo7pm { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_33lkfllim69lb69whqc2, .table th.tinytable_css_33lkfllim69lb69whqc2 { text-align: left; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_qwynldwi71uw1iqnrp06, .table th.tinytable_css_qwynldwi71uw1iqnrp06 { text-align: left; }
+      .table td.tinytable_css_a5sgbw6agovd5x645heh, .table th.tinytable_css_a5sgbw6agovd5x645heh { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_1616iwxyg409ez1hmw4y, .table th.tinytable_css_1616iwxyg409ez1hmw4y { text-align: left; text-align: center; }
+      .table td.tinytable_css_j6ipwhrof70ptbqo3gtr, .table th.tinytable_css_j6ipwhrof70ptbqo3gtr { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_vcwwd024d4rno9zw8y2c" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_y74clstbswz1hzd6r4hx" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1"> </th>
@@ -2428,27 +2428,29 @@ Table&nbsp;2: Regression Results for Lagged, Emergence, Survival, and Interactio
 <h1 class="unnumbered">Glossary</h1>
 <p>&nbsp;</p>
 <div class="glossary-table">
-<div class="cell">
-<div id="tbl-glossary7" class="cell quarto-float quarto-figure quarto-figure-center anchored">
+<div class="cell" data-tbl-colwidths="[25,75]">
+<div id="tbl-glossary7" class="cell quarto-float quarto-figure quarto-figure-center anchored" data-tbl-colwidths="[25,75]">
 <figure class="quarto-float quarto-float-tbl figure">
 <div aria-describedby="tbl-glossary7-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <div class="cell-output-display">
-<table class="table do-not-create-environment cell table-sm table-striped small" data-quarto-postprocess="true">
+<table class="cell table table-sm table-striped small">
+<colgroup>
+<col style="width: 25%">
+<col style="width: 75%">
+</colgroup>
 <thead>
 <tr class="header">
-<th style="text-align: left;" data-quarto-table-cell-role="th">Term</th>
-<th style="text-align: left;" data-quarto-table-cell-role="th">Description</th>
+<th style="text-align: left;">Term</th>
+<th style="text-align: left;">Description</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td style="text-align: left; min-width: 1.25in;">dichotomous</td>
+<td style="text-align: left;">dichotomous</td>
 <td style="text-align: left;">Can only assume two mutually exclusive, but internally homogeneous qualitative categories</td>
 </tr>
 </tbody>
 </table>
-
-
 </div>
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-tbl" id="tbl-glossary7-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
