--- a/03-PO33Q.html
+++ b/03-PO33Q.html
@@ -412,7 +412,7 @@ Figure&nbsp;1: Latent Variable
 <p>Your inclination to go out, is likely to be influenced by the amount of money you have in your wallet / bank. If you are broke, you will be less inclined (if you are sensible), and if you are swimming in it, you will be more inclined. So, if the “propensity to go out” (which remember is running from minus to plus infinity) is influenced by your budget, then let’s construct a graph, in which we pop the propensity to go out on the y-axis, and the budget on the x-axis. If we assume that this relationship is linear, we can fit a regression line into this coordinate system, just as we have in the previous week:</p>
 <p>&nbsp; &nbsp;</p>
 <p><img src="files/Week 3/prop.png" id="fig-out" class="img-fluid quarto-figure quarto-figure-center anchored" style="width:70.0%" alt="Effect of Budget on Propensity to Go Out"> Whilst this visualises the influence of the budget on the latent variable, what we are aiming for is to make a prediction about the probability of you going out, or not.</p>
-<p>Now imagine, your budget is <span class="math inline">\(x_{1}\)</span>. The regression line depicts the propensity that we would expect to see, on average, for somebody with a budget of <span class="math inline">\(x_{1}\)</span>. But the crucial point is that not everybody is average. Some might have an essay deadline approaching which makes them even less likely to go out. Others might just have received their essay mark, and want to celebrate that they scored a first. In other words, there is variability around the regression line. And we assume that whilst this variability is random, it still follows a particular distribution. In the case of a probit, this is the normal distribution<a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a>. I have added these distributions to Figure <a href="#fig-towcdf" class="quarto-xref">Figure&nbsp;<span>2</span></a>.</p>
+<p>Now imagine, your budget is <span class="math inline">\(x_{1}\)</span>. The regression line depicts the propensity that we would expect to see, on average, for somebody with a budget of <span class="math inline">\(x_{1}\)</span>. But the crucial point is that not everybody is average. Some might have an essay deadline approaching which makes them even less likely to go out. Others might just have received their essay mark, and want to celebrate that they scored a first. In other words, there is variability around the regression line. And we assume that whilst this variability is random, it still follows a particular distribution. In the case of a probit, this is the normal distribution<a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a>. I have added these distributions to <a href="#fig-towcdf" class="quarto-xref">Figure&nbsp;<span>2</span></a>.</p>
 <p>&nbsp; &nbsp;</p>
 <div id="fig-towcdf" class="quarto-float quarto-figure quarto-figure-center anchored" data-fig-align="center">
 <figure class="quarto-float quarto-float-fig figure">
@@ -678,8 +678,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <script>
 
-      function styleCell_t39iabepzgv2pot5xug7(i, j, css_id) {
-          var table = document.getElementById("tinytable_t39iabepzgv2pot5xug7");
+      function styleCell_5uwtbv1xvz59pjjr4r7a(i, j, css_id) {
+          var table = document.getElementById("tinytable_5uwtbv1xvz59pjjr4r7a");
           var cell = table.rows[i]?.cells[j];  // Safe navigation to avoid errors
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -689,7 +689,7 @@ Number of Fisher Scoring iterations: 5</code></pre>
           }
       }
       function insertSpanRow(i, colspan, content) {
-        var table = document.getElementById('tinytable_t39iabepzgv2pot5xug7');
+        var table = document.getElementById('tinytable_5uwtbv1xvz59pjjr4r7a');
         var newRow = table.insertRow(i);
         var newCell = newRow.insertCell(0);
         newCell.setAttribute("colspan", colspan);
@@ -697,8 +697,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
         // this may be unsafe, but innerText does not interpret <br>
         newCell.innerHTML = content;
       }
-      function spanCell_t39iabepzgv2pot5xug7(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_t39iabepzgv2pot5xug7");
+      function spanCell_5uwtbv1xvz59pjjr4r7a(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_5uwtbv1xvz59pjjr4r7a");
         const targetRow = table.rows[i];
         const targetCell = targetRow.cells[j];
         for (let r = 0; r < rowspan; r++) {
@@ -728,20 +728,20 @@ Number of Fisher Scoring iterations: 5</code></pre>
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: 5, j: 1 },  ], css_id: 'tinytable_css_aab571pptag1vqs022gi',}, 
-          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 4, j: 1 },  ], css_id: 'tinytable_css_3h09rmlmd8xszkvrbgpj',}, 
-          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_xj0rw3ybev5o3s3bx6df',}, 
-          { positions: [ { i: 1, j: 1 },  ], css_id: 'tinytable_css_g4qmizo3vyw401g3j941',}, 
-          { positions: [ { i: 5, j: 0 },  ], css_id: 'tinytable_css_bgja11dhwcowqdokijiq',}, 
-          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 },  ], css_id: 'tinytable_css_4c2uy7twhbs1a82czrqv',}, 
-          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_094jkwwfdc6z3fgq746a',}, 
-          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_w3wt2wf9xgapjpl1kqcx',}, 
+          { positions: [ { i: 5, j: 1 },  ], css_id: 'tinytable_css_jjx7rp2xim9ogmfl3mjv',}, 
+          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 4, j: 1 },  ], css_id: 'tinytable_css_viryowurwdby6a9iry87',}, 
+          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_8q5jns4vehs4mkramibo',}, 
+          { positions: [ { i: 1, j: 1 },  ], css_id: 'tinytable_css_ncpw654s4tjfx1mgn72o',}, 
+          { positions: [ { i: 5, j: 0 },  ], css_id: 'tinytable_css_y96wsjtbjexmxt3i0v7m',}, 
+          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 },  ], css_id: 'tinytable_css_banhuffyed1l3w6y50p5',}, 
+          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_pbvsvp96pzlv3i6h7pvl',}, 
+          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_71l5756g53t4ebo1hfkn',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_t39iabepzgv2pot5xug7(cell.i, cell.j, group.css_id);
+                  styleCell_5uwtbv1xvz59pjjr4r7a(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -749,17 +749,17 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_aab571pptag1vqs022gi, .table th.tinytable_css_aab571pptag1vqs022gi { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_3h09rmlmd8xszkvrbgpj, .table th.tinytable_css_3h09rmlmd8xszkvrbgpj { text-align: center; }
-      .table td.tinytable_css_xj0rw3ybev5o3s3bx6df, .table th.tinytable_css_xj0rw3ybev5o3s3bx6df { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_g4qmizo3vyw401g3j941, .table th.tinytable_css_g4qmizo3vyw401g3j941 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_bgja11dhwcowqdokijiq, .table th.tinytable_css_bgja11dhwcowqdokijiq { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_4c2uy7twhbs1a82czrqv, .table th.tinytable_css_4c2uy7twhbs1a82czrqv { text-align: left; }
-      .table td.tinytable_css_094jkwwfdc6z3fgq746a, .table th.tinytable_css_094jkwwfdc6z3fgq746a { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_w3wt2wf9xgapjpl1kqcx, .table th.tinytable_css_w3wt2wf9xgapjpl1kqcx { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_jjx7rp2xim9ogmfl3mjv, .table th.tinytable_css_jjx7rp2xim9ogmfl3mjv { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_viryowurwdby6a9iry87, .table th.tinytable_css_viryowurwdby6a9iry87 { text-align: center; }
+      .table td.tinytable_css_8q5jns4vehs4mkramibo, .table th.tinytable_css_8q5jns4vehs4mkramibo { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_ncpw654s4tjfx1mgn72o, .table th.tinytable_css_ncpw654s4tjfx1mgn72o { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_y96wsjtbjexmxt3i0v7m, .table th.tinytable_css_y96wsjtbjexmxt3i0v7m { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_banhuffyed1l3w6y50p5, .table th.tinytable_css_banhuffyed1l3w6y50p5 { text-align: left; }
+      .table td.tinytable_css_pbvsvp96pzlv3i6h7pvl, .table th.tinytable_css_pbvsvp96pzlv3i6h7pvl { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_71l5756g53t4ebo1hfkn, .table th.tinytable_css_71l5756g53t4ebo1hfkn { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_t39iabepzgv2pot5xug7" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_5uwtbv1xvz59pjjr4r7a" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1"> </th>
@@ -863,8 +863,8 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 
     <script>
 
-      function styleCell_dqm5djqjogk2t2dog7nk(i, j, css_id) {
-          var table = document.getElementById("tinytable_dqm5djqjogk2t2dog7nk");
+      function styleCell_8k3xtkuw5wzqmngx8mkq(i, j, css_id) {
+          var table = document.getElementById("tinytable_8k3xtkuw5wzqmngx8mkq");
           var cell = table.rows[i]?.cells[j];  // Safe navigation to avoid errors
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -874,7 +874,7 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
           }
       }
       function insertSpanRow(i, colspan, content) {
-        var table = document.getElementById('tinytable_dqm5djqjogk2t2dog7nk');
+        var table = document.getElementById('tinytable_8k3xtkuw5wzqmngx8mkq');
         var newRow = table.insertRow(i);
         var newCell = newRow.insertCell(0);
         newCell.setAttribute("colspan", colspan);
@@ -882,8 +882,8 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
         // this may be unsafe, but innerText does not interpret <br>
         newCell.innerHTML = content;
       }
-      function spanCell_dqm5djqjogk2t2dog7nk(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_dqm5djqjogk2t2dog7nk");
+      function spanCell_8k3xtkuw5wzqmngx8mkq(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_8k3xtkuw5wzqmngx8mkq");
         const targetRow = table.rows[i];
         const targetCell = targetRow.cells[j];
         for (let r = 0; r < rowspan; r++) {
@@ -913,20 +913,20 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: 5, j: 1 },  ], css_id: 'tinytable_css_m6fs7g8cbvac9vw9wcu1',}, 
-          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 4, j: 1 },  ], css_id: 'tinytable_css_05a57imu6san1tsfwo04',}, 
-          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_doxrstqijdc9sjpct1ph',}, 
-          { positions: [ { i: 1, j: 1 },  ], css_id: 'tinytable_css_iyywawmtoz7crd0331py',}, 
-          { positions: [ { i: 5, j: 0 },  ], css_id: 'tinytable_css_j1k5chak6oxao33qi657',}, 
-          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 },  ], css_id: 'tinytable_css_d6w2m6k8n30wb8rf473g',}, 
-          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_ixcs0qlgtqow6g9kcnru',}, 
-          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_oc06925wgc0v2ifilwuh',}, 
+          { positions: [ { i: 5, j: 1 },  ], css_id: 'tinytable_css_janf1gog28e9jj20rd5q',}, 
+          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 4, j: 1 },  ], css_id: 'tinytable_css_po5haamawsc6zpmcldzk',}, 
+          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_t3vvokbx8rd3jo9epmeg',}, 
+          { positions: [ { i: 1, j: 1 },  ], css_id: 'tinytable_css_owxyj2auo28mebema6g4',}, 
+          { positions: [ { i: 5, j: 0 },  ], css_id: 'tinytable_css_4t27wqionmxuxd7yc9zc',}, 
+          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 },  ], css_id: 'tinytable_css_iscocp5vyok84geceosy',}, 
+          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_6rgns82w27798b8jxx6t',}, 
+          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_g1y31gxncqcsl93qz9hp',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_dqm5djqjogk2t2dog7nk(cell.i, cell.j, group.css_id);
+                  styleCell_8k3xtkuw5wzqmngx8mkq(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -934,17 +934,17 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_m6fs7g8cbvac9vw9wcu1, .table th.tinytable_css_m6fs7g8cbvac9vw9wcu1 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_05a57imu6san1tsfwo04, .table th.tinytable_css_05a57imu6san1tsfwo04 { text-align: center; }
-      .table td.tinytable_css_doxrstqijdc9sjpct1ph, .table th.tinytable_css_doxrstqijdc9sjpct1ph { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_iyywawmtoz7crd0331py, .table th.tinytable_css_iyywawmtoz7crd0331py { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_j1k5chak6oxao33qi657, .table th.tinytable_css_j1k5chak6oxao33qi657 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_d6w2m6k8n30wb8rf473g, .table th.tinytable_css_d6w2m6k8n30wb8rf473g { text-align: left; }
-      .table td.tinytable_css_ixcs0qlgtqow6g9kcnru, .table th.tinytable_css_ixcs0qlgtqow6g9kcnru { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_oc06925wgc0v2ifilwuh, .table th.tinytable_css_oc06925wgc0v2ifilwuh { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_janf1gog28e9jj20rd5q, .table th.tinytable_css_janf1gog28e9jj20rd5q { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_po5haamawsc6zpmcldzk, .table th.tinytable_css_po5haamawsc6zpmcldzk { text-align: center; }
+      .table td.tinytable_css_t3vvokbx8rd3jo9epmeg, .table th.tinytable_css_t3vvokbx8rd3jo9epmeg { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_owxyj2auo28mebema6g4, .table th.tinytable_css_owxyj2auo28mebema6g4 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_4t27wqionmxuxd7yc9zc, .table th.tinytable_css_4t27wqionmxuxd7yc9zc { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_iscocp5vyok84geceosy, .table th.tinytable_css_iscocp5vyok84geceosy { text-align: left; }
+      .table td.tinytable_css_6rgns82w27798b8jxx6t, .table th.tinytable_css_6rgns82w27798b8jxx6t { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_g1y31gxncqcsl93qz9hp, .table th.tinytable_css_g1y31gxncqcsl93qz9hp { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_dqm5djqjogk2t2dog7nk" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_8k3xtkuw5wzqmngx8mkq" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1"> </th>
