--- a/11-Markdown.html
+++ b/11-Markdown.html
@@ -506,7 +506,7 @@ preferably APA styled, but I’m not too precious as long as it’s consistent
 <li>Automatic page break if there are fewer than seven lines after a (sub-)section heading</li>
 <li>Automatic List of References, formatted in APA (American Psychological Association) style</li>
 <li>Appendix after the List of References</li>
-<li>Code chunks are set by default not to show the code in the rendered file. Messages, warnings, and errors are suppressed</li>
+<li>Code chunks are set by default not to show the code in the rendered file. Messages, warnings, and errors are suppressed.</li>
 </ul>
 </section>
 <section id="assessment-submission" class="level2 unnumbered">
